--- a/sentimental_analysis_project.ipynb
+++ b/sentimental_analysis_project.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPTYIZMkGduYQt8OHkwoXP9",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +18,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/roshanjanaknikam/Sentimental-analysis/blob/main/sentimental_analysis_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "laR1bqnDmeeA"
       },
@@ -52,7 +65,7 @@
       "metadata": {
         "id": "eWE9WWgGmnuO"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +86,7 @@
       "metadata": {
         "id": "ZIkuCHh1mrYX"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +102,7 @@
         "id": "PEwY-s3Cn99P",
         "outputId": "43ed8330-466a-4113-f346-23ba57a2d35f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +313,7 @@
         "id": "B5DED3P0n-Hj",
         "outputId": "df0346be-a5e3-4767-f658-93d4fd162eba"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +354,7 @@
         "id": "tDzzt_mMoFdk",
         "outputId": "3d63f047-09f9-46a6-8eaa-a2da30f5593f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +526,7 @@
         "id": "CHSEUKkpoFfR",
         "outputId": "b61cbb8f-dd08-404c-d852-95a9403de9f9"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -555,7 +568,7 @@
         "id": "gaAShqayoFiF",
         "outputId": "0297e72f-72e3-401d-ec4f-6002b54f6867"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +603,7 @@
         "id": "dKTuMUr3oFjt",
         "outputId": "79bc9778-a72a-4ba5-8e47-6607a389e937"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,7 +635,7 @@
         "id": "fHoFpifPn-JE",
         "outputId": "f2b5c4c3-140a-497d-b88c-9378a1c4ecbd"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -651,7 +664,7 @@
         "id": "LH8OYWNLn-M2",
         "outputId": "5e35cd45-5621-46c0-95b2-048a801fd2c9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +821,7 @@
       "metadata": {
         "id": "8dcpw7ACopPQ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +839,7 @@
       "metadata": {
         "id": "bX5bP2MWtqHF"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -846,13 +859,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 334
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vz0FlNF5opQ5",
         "outputId": "2b30df1d-6abe-442a-e6c8-b8c5d05c327b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -874,7 +886,7 @@
       "metadata": {
         "id": "-j5RY_w1opUT"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -904,7 +916,7 @@
       "metadata": {
         "id": "GXjRLvafopV2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -934,7 +946,7 @@
       "metadata": {
         "id": "m75V3h0AopYU"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,7 +961,7 @@
         "id": "t0oPUpg-opaC",
         "outputId": "f72fe426-ba8f-4202-fe16-2ef2c7844aaf"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +987,7 @@
         "id": "OhBHU02Qopc9",
         "outputId": "2c5b3014-71f5-435a-927e-8d297ea9f683"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1001,7 +1013,7 @@
         "id": "Cr3h3B2gopec",
         "outputId": "257c75f7-3cec-4c25-ca72-9e2eb3c65108"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1027,7 +1039,7 @@
         "id": "WNkIulV5opiO",
         "outputId": "1612c884-0a19-48ac-dfe5-ef9bed3c2a1d"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1063,7 +1075,7 @@
       "metadata": {
         "id": "d0ZwpCnbpgxx"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1087,7 @@
       "metadata": {
         "id": "DywWOy0IpgzF"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1087,7 +1099,7 @@
       "metadata": {
         "id": "9wWAQGmtpg2H"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1117,7 +1129,7 @@
       "metadata": {
         "id": "D743GN6Apg6R"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1141,7 +1153,7 @@
         "id": "n0CO424Jpg-8",
         "outputId": "5bf72fec-75b7-403b-903c-cb9b80bc5979"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1170,7 +1182,7 @@
       "metadata": {
         "id": "wbyjtIoqphAN"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1185,7 +1197,7 @@
         "id": "qlaHOFULphDT",
         "outputId": "63c3d1d7-9aa5-41e9-fc46-62cb30e6bf73"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1225,7 +1237,7 @@
       "metadata": {
         "id": "vjYHyqTDphE7"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1236,7 +1248,7 @@
       "metadata": {
         "id": "gCu0DDixqX5s"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1269,7 +1281,7 @@
         "id": "nEaHmTraqDLD",
         "outputId": "d88f2ac2-59db-47c2-9ba6-75293ad8d1ff"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1300,7 +1312,7 @@
       "metadata": {
         "id": "Av3HQ1WvqDM1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1312,7 +1324,7 @@
       "metadata": {
         "id": "WZxolbrFqDTr"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1327,7 +1339,7 @@
         "id": "2hrQVMPSqDVK",
         "outputId": "45fa535f-e858-4e52-9641-167b1cf39996"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1361,7 @@
       "metadata": {
         "id": "tlvTEPMfrbdO"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1364,7 +1376,7 @@
         "id": "60Lm6VnzrbfD",
         "outputId": "5aa9a8ee-acfb-4131-d289-848b8b0a6b1b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1397,7 +1409,7 @@
       "metadata": {
         "id": "AUY452wlrbkg"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1412,7 +1424,7 @@
         "id": "zzLB_fI5rbmI",
         "outputId": "e1d9cf6d-01b9-4010-c252-80f34cbb843b"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,7 +1444,7 @@
       "metadata": {
         "id": "Mr6lC2QIr779"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1457,7 +1469,7 @@
         "id": "OrxiOab1r79x",
         "outputId": "bf09b9d3-4d4f-40a9-a524-2673a33833ad"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1486,7 +1498,7 @@
       "metadata": {
         "id": "gMolUWNYr7_3"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1495,7 +1507,7 @@
       "metadata": {
         "id": "SvZaKWZer8CA"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1520,7 +1532,7 @@
       "metadata": {
         "id": "_t3ynTzwr8EA"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1535,7 +1547,7 @@
         "id": "N_FTOte1r8GA",
         "outputId": "3cf5da8a-a6d4-4841-fdc9-96e2ca83defc"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1564,7 +1576,7 @@
       "metadata": {
         "id": "e0C2VjV_sP8K"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1579,7 +1591,7 @@
         "id": "BpUEa-9ssP-s",
         "outputId": "7a167601-c236-443f-9be2-eca1ca217845"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1608,7 +1620,7 @@
       "metadata": {
         "id": "S8k0joATsQBs"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     }
   ]
